--- a/src/app/navbar-anuncios/navbar-anuncios.component.html
+++ b/src/app/navbar-anuncios/navbar-anuncios.component.html
@@ -12,6 +12,9 @@
         <li class="nav-item active">
             <button onclick="window.location.href = '#';" class="buttonNavbar" type="button"><i class="fas fa-angle-left"></i>&nbsp;{{ 'NAVBAR.HOME' | translate }}</button>
         </li>
+        <li class="nav-item active">
+            <button onclick="window.location.href = 'noticias';" class="buttonNavbar" type="button">{{ 'NAVBAR.NEWS' | translate }}</button>
+        </li>
       </ul>
       
       <!-- Icons on right -->
