--- a/src/app/noticia/noticia.component.html
+++ b/src/app/noticia/noticia.component.html
@@ -30,8 +30,8 @@
     </div>
 
     <div class="bottomLine"> 
-        <div fxLayoutAlign="center center" fxLayout="column">
-            <div class=" add-margin"> 
+        <div class="blog-image" fxLayoutAlign="center center" fxLayout="column">
+            <div class="add-margin"> 
                 <mdb-card-img class="roundedBlock" src="{{(newsData | async).imageUrl}}" alt="Foto de Curso de Python"></mdb-card-img>
                 <p class="whitetext-photo-text">{{(newsData | async).imageText}}</p>
             </div>
