--- a/src/app/editar-anuncio/editar-anuncio.component.html
+++ b/src/app/editar-anuncio/editar-anuncio.component.html
@@ -10,7 +10,8 @@
     <input class="long-input" type="text" id="imageUrl" name="imageUrl"><br><br>
     <label for="lname">imagen text</label>
     <input class="long-input" type="text" id="imageText" name="imageText"><br><br>
-
+    <label for="lname">Breve introducción</label>
+    <input class="long-input" type="text" id="shortIntro" name="imageText"><br><br>
     <label for="lname">Contenido</label>
     <textarea class="long-input" id="content" name="content" cols="50" rows="10"></textarea>
     
