--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -458,6 +458,73 @@
                 </div>
             </mat-expansion-panel>
             
+
+            <br><br>
+
+            <mat-expansion-panel class="mat-elevation-z0 color-wie">
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        {{ 'SUBSECTIONS.WIE' | translate }}
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+                <div class="bottomLine">
+                    <div class="card-group">
+                        <!-- Matías Bergerman -->
+
+                        <!-- Ignacio Villanueva -->
+                        <!-- <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Ignacio Villanueva"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Ignacio Villanueva</strong></h4>
+                                <h5>{{ 'HOME.CARGO.EDUCATION.RRPP' | translate }}</h5> -->
+
+                                <!-- Linkedin -->
+                                <!-- <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/ignacio-villanueva-256541176/"><i class="fab fa-linkedin"></i></a> -->
+                                <!-- Mail -->
+                                <!-- <a mdbWavesEffect class="cardIcon" href="mailto:ivillanueva@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card> -->
+                    </div>
+
+                </div>
+            </mat-expansion-panel>
+
+            <mat-expansion-panel class="mat-elevation-z0 color-wie">
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        {{ 'SUBSECTIONS.CS' | translate }}
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+                <div class="bottomLine">
+                    <div class="card-group">
+                        <!-- Matías Bergerman -->
+
+                        <!-- Ignacio Villanueva -->
+                        <!-- <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Ignacio Villanueva"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Ignacio Villanueva</strong></h4>
+                                <h5>{{ 'HOME.CARGO.EDUCATION.RRPP' | translate }}</h5> -->
+
+                                <!-- Linkedin -->
+                                <!-- <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/ignacio-villanueva-256541176/"><i class="fab fa-linkedin"></i></a> -->
+                                <!-- Mail -->
+                                <!-- <a mdbWavesEffect class="cardIcon" href="mailto:ivillanueva@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card> -->
+                    </div>
+
+                </div>
+            </mat-expansion-panel>
+            
         </mat-accordion>
 
     </mat-tab>
