added wie y computer society

--- a/src/app/team/team.component.css
+++ b/src/app/team/team.component.css
@@ -50,6 +50,11 @@ mat-panel-title {
 }
 
 .color-wie{
-    background: rgb(10,27,103);
-    background: linear-gradient(75deg, rgba(10,27,103,1) 0%, rgba(92,37,186,1) 50%, rgba(59,173,217,1) 100%) no-repeat center center fixed;
+    background: rgb(177, 138, 240);
+    background: linear-gradient(75deg, rgb(177, 138, 240), rgba(92,37,186,1) 50%, rgba(59,173,217,1) 100%) no-repeat center center fixed;
+}
+
+.color-cs{
+    background: rgb(252, 192, 111);
+    background: linear-gradient(75deg, rgb(252, 192, 111), rgba(92,37,186,1) 50%, rgba(59,173,217,1) 100%) no-repeat center center fixed;
 }
