--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -461,65 +461,270 @@
 
             <br><br>
 
-            <mat-expansion-panel class="mat-elevation-z0 color-wie">
-                <mat-expansion-panel-header>
+            <mat-expansion-panel class="mat-elevation-z0">
+                <mat-expansion-panel-header class="color-wie">
                     <mat-panel-title>
                         {{ 'SUBSECTIONS.WIE' | translate }}
                     </mat-panel-title>
                 </mat-expansion-panel-header>
                 <div class="bottomLine">
                     <div class="card-group">
-                        <!-- Matías Bergerman -->
-
-                        <!-- Ignacio Villanueva -->
-                        <!-- <mdb-card>
+                        
+                        <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Ignacio Villanueva"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/Fwd34CH/MariaLuz.jpg" alt="Foto de Patricio Whittingslow"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
                             <mdb-card-body cascade="true" class="text-center pb-0 px-0">
-                                <h4 class="card-title"><strong>Ignacio Villanueva</strong></h4>
-                                <h5>{{ 'HOME.CARGO.EDUCATION.RRPP' | translate }}</h5> -->
+                                <h4 class="card-title"><strong>Malu Stewart Harris</strong></h4>
+                                <h5>{{ 'HOME.CARGO.WIE.PRESIDENTE' | translate }}</h5>
 
                                 <!-- Linkedin -->
-                                <!-- <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/ignacio-villanueva-256541176/"><i class="fab fa-linkedin"></i></a> -->
+                                <!--<a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/patricio-whittingslow-3b9564140/"><i class="fab fa-linkedin"></i></a>-->
                                 <!-- Mail -->
-                                <!-- <a mdbWavesEffect class="cardIcon" href="mailto:ivillanueva@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                                <a mdbWavesEffect class="cardIcon" href="mailto:mastewart@itba.edu.ar"><i class="fas fa-envelope"></i></a>
                             </mdb-card-body>
-                        </mdb-card> -->
+                        </mdb-card>
+
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/YB7N3hp/d-with-VSCO-with-dog1-preset.jpg" alt="Foto de Elisabet Del Pilar Crespo"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Elisabet del Pilar Crespo</strong></h4>
+                                <h5>{{ 'HOME.CARGO.WIE.VICEPRESIDENTE' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/elisabet-del-pilar-crespo"><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:ecrespo@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/m5LWTL8/Catalena-Lucena.jpg" alt="Foto de Catalena Lucena Maguire"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Catalina Lucena Maguire</strong></h4>
+                                <h5>{{ 'HOME.CARGO.WIE.TESORERA' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/catalina-lucena-maguire-322033169 "><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:clucena@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/1RMpjj0/sofiapetrozzino.jpg" alt="Foto de Sofia Petrozzino"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Sofia Petrozzino</strong></h4>
+                                <h5>{{ 'HOME.CARGO.WIE.COMUNICACION' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/sof%C3%ADa-petrozzino-22406a177/"><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:spetrozzino@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+                    </div>
+                    <div class="card-group">
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/fMNMQHf/aldanabruno.jpg" alt="Foto de Aldana Bruno"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Aldana Bruno</strong></h4>
+                                <h5>{{ 'HOME.CARGO.WIE.COMUNICACION' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/aldana-bruno-5631a1177/"><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:abruno@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/JmVtNQ8/sofia-cerritini.jpg" alt="Foto de Sofia Cerretini"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Sofia Cerretini</strong></h4>
+                                <h5>{{ 'HOME.CARGO.WIE.PLANIFICACION' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="http://linkedin.com/in/sofia-cerretini-2452691a5"><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:scerretini@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+                        
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/zfT818s/candelariaruiz.jpg" alt="Foto de Candelaria Ruiz"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Candelaria Ruiz</strong></h4>
+                                <h5>{{ 'HOME.CARGO.WIE.VOLUNTARIA' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/mar%C3%ADa-candelaria-ruiz-casas/"><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:mariruiz@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/K9SbCTJ/carolapedrosa.jpg" alt="Foto de Carola Pedrosa"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Carola Pedrosa</strong></h4>
+                                <h5>{{ 'HOME.CARGO.WIE.VOLUNTARIA' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/carola-pedrosa-87342b1a3/"><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:cpedrosa@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
                     </div>
 
                 </div>
+                
             </mat-expansion-panel>
 
-            <mat-expansion-panel class="mat-elevation-z0 color-wie">
-                <mat-expansion-panel-header>
+            <mat-expansion-panel class="mat-elevation-z0">
+                <mat-expansion-panel-header class="color-cs">
                     <mat-panel-title>
                         {{ 'SUBSECTIONS.CS' | translate }}
                     </mat-panel-title>
                 </mat-expansion-panel-header>
                 <div class="bottomLine">
                     <div class="card-group">
-                        <!-- Matías Bergerman -->
-
-                        <!-- Ignacio Villanueva -->
-                        <!-- <mdb-card>
+                        <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Ignacio Villanueva"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/tZ0ZyY3/gonzalohirsch.jpg" alt="Foto de Carola Pedrosa"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
                             <mdb-card-body cascade="true" class="text-center pb-0 px-0">
-                                <h4 class="card-title"><strong>Ignacio Villanueva</strong></h4>
-                                <h5>{{ 'HOME.CARGO.EDUCATION.RRPP' | translate }}</h5> -->
+                                <h4 class="card-title"><strong>Gonzalo Hirsch</strong></h4>
+                                <h5>{{ 'HOME.CARGO.CS.PRESIDENTE' | translate }}</h5>
 
                                 <!-- Linkedin -->
-                                <!-- <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/ignacio-villanueva-256541176/"><i class="fab fa-linkedin"></i></a> -->
+                                <a mdbWavesEffect class="cardIcon" href="https://ar.linkedin.com/in/gonzalo-hirsch-5b4854155"><i class="fab fa-linkedin"></i></a>
                                 <!-- Mail -->
-                                <!-- <a mdbWavesEffect class="cardIcon" href="mailto:ivillanueva@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                                <a mdbWavesEffect class="cardIcon" href="mailto:ghirsch@itba.edu.ar"><i class="fas fa-envelope"></i></a>
                             </mdb-card-body>
-                        </mdb-card> -->
+                        </mdb-card>
+
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/m5LWTL8/Catalena-Lucena.jpg" alt="Foto de Catalena Lucena Maguire"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Catalina Lucena Maguire</strong></h4>
+                                <h5>{{ 'HOME.CARGO.WIE.TESORERA' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/catalina-lucena-maguire-322033169 "><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:clucena@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/vX8kHb0/Uriel-Mijura.jpg" alt="Foto de Catalena Lucena Maguire"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Uriel Mijura</strong></h4>
+                                <h5>{{ 'HOME.CARGO.CS.GENERALSEC' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <!--<a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/catalina-lucena-maguire-322033169 "><i class="fab fa-linkedin"></i></a>-->
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:umihura@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+
+
+
+                    </div>
+                    <div class="card-group">
+                        
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/7JRcVw0/grigio.jpg" alt="Foto de Juan Gabriel Griggio"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Juan Gabriel Griggio</strong></h4>
+                                <h5>{{ 'HOME.CARGO.CS.LOGISTIC' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="https://ar.linkedin.com/in/juan-gabriel-griggio-816823198"><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:jgriggio@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+                        
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/gv8Wmcb/alvaro-mendez.jpg" alt="Foto de Ignacio Alberto Méndez"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Ignacio Alberto Méndez</strong></h4>
+                                <h5>{{ 'HOME.CARGO.CS.LOGISTIC' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/ignacio-m%C3%A9ndez-62b3b1181/"><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:ignmendez@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/vcfqtQf/flor-petrovich.jpg" alt="Foto de Florencia Petrikovich"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Florencia Petrikovich</strong></h4>
+                                <h5>{{ 'HOME.CARGO.CS.LOGISTIC' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/florencia-petrikovich-a2b3aa1a6/"><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:fpetrikovich@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
                     </div>
 
                 </div>
